--- a/static/css/breakpoint-medium.scss
+++ b/static/css/breakpoint-medium.scss
@@ -20,7 +20,7 @@ nav {
 	}
 	ul#fullmenu {
 		background-color: transparent;
-		position: initial;
+		position: static;
 		width: auto;
 		max-height: none;
 		float: right;
